--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Electron App</title>
+    <style>
+      #root {
+        height: 100%;
+        width: 100%;
+      }
+    </style>
+    <title>Shovel DB</title>
   </head>
   <body>
     <div id="root"></div>
