--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="./static/avatar.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       #root {
